--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main{
     color: rgb(230, 230, 230);
 }
 
-#rst-btn,#restart{
+#rst-btn,#restart,#restartAfterOver{
     outline: none;
     padding: .8rem 1.8rem;
     background-color: rgb(248, 216, 216);
@@ -60,6 +60,9 @@ main{
     background-color: rgb(242, 191, 191);
 }
 #restart:hover{
+    background-color: rgb(242, 191, 191);
+}
+#restartAfterOver:hover{
     background-color: rgb(242, 191, 191);
 }
 
@@ -87,6 +90,27 @@ main{
     color: rgb(17, 253, 17);
     font-weight: 900;
 }
+
+.game-over-div{
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(51, 58, 51, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 3rem;
+    position: absolute;
+}
+#game-over-msg{
+    font-size: 2rem;
+    max-width: 500px;
+    background: linear-gradient(90deg,rgb(255, 94, 94) 0%, rgba(199, 87, 87, 1) 50%, rgba(237, 83, 83, 1) 100%);
+    background-clip: text;
+    color: transparent;
+    text-shadow: 1px 1px 5px rgba(251, 107, 107, 0.811);
+}
+
 .hide{
     display: none;
 }
